[package]
name = "formant_extractor"
version = "0.1.0"
authors = ["Andrew Smith <andrewchristophersmith@gmail.com>"]

[dependencies]
num = "0.1"
hound = "2.0.0"
vox_box = { path = "../.." }
rustfft = "1.0"
clap = "*"

[dependencies.sample]
git = "https://github.com/RustAudio/sample.git"
rev = "399244f73714d74330c371809a7988717f8bc534"
